broken links fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@356 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -410,17 +410,17 @@ public void uninstalled() {
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.dataview.monitor</td>
                     <td class="ct">Provides the entry point into the "Monitor" tab.</td>
-                    <td class="ct"><ul><li><a href="api-faq.html#how-extend-monitor">How do I extend the Monitor tab?</a></ul></td>
+                    <td class="ct"><ul><li><a href="api-faq.html#how-create-tabs">How do I extend the Monitor tab?</a></ul></td>
                 </tr>
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.dataview.overview</td>
                     <td class="ct">Provides the entry point into the "Overview" tab.</td>
-                    <td class="ct"><ul><li><a href="api-faq.html#how-extend-overview">How do I extend the Overview tab?</a></ul></td>
+                    <td class="ct"><ul><li><a href="api-faq.html#how-create-tabs">How do I extend the Overview tab?</a></ul></td>
                 </tr>
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.dataview.threads</td>
                     <td class="ct">Provides the entry point into the "Threads" tab.</td>
-                    <td class="ct"><ul><li><a href="api-faq.html#how-extend-threads">How do I extend the Threads tab?</a></ul></td>
+                    <td class="ct"><ul><li><a href="api-faq.html#how-create-tabs">How do I extend the Threads tab?</a></ul></td>
                 </tr>
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.explorer</td>
@@ -436,7 +436,7 @@ public void uninstalled() {
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.heapdump</td>
                     <td class="ct">Provides the entry point into the "Heap Dump" tab.</td>
-                    <td class="ct"><ul><li><a href="api-faq.html#how-extend-headdump">How do I extend the Heap Dump tab?</a></ul></td>
+                    <td class="ct"><ul><li><a href="api-faq.html#how-create-tabs">How do I extend the Heap Dump tab?</a></ul></td>
                 </tr>
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.model</td>
@@ -473,8 +473,8 @@ public void uninstalled() {
                         <tt>DataSources</tt> that represent a host, that is, localhost or remote host.
                     </td>
                     <td class="ct"><ul><li><a href="api-faq.html#what-is-host">What is a host?</a>
-                        <li><a href="api-faq.html#how-extend-host">How do I extend the Host tab?</a>
-                <li><a href="api-faq.html#how-extend-host-overview">How do I extend the Host Overview tab?</a></ul></td>
+                        <li><a href="api-faq.html#how-extend-host">How do I add additional views for the Host data source?</a>
+                <li><a href="api-faq.html#how-extend-host-overview">How do I extend the Host "Overview" tab?</a></ul></td>
                 </tr>
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.model.jmx</td>
@@ -511,7 +511,7 @@ public void uninstalled() {
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.threaddump</td>
                     <td class="ct">Provides the entry point into the "Thread Dump" tab.</td>
-                    <td class="ct"><ul><li><a href="api-faq.html#how-extend-threaddump">How do I extend the Thread Dump tab?</a></ul></td>
+                    <td class="ct"><ul><li><a href="api-faq.html#how-create-tabs">How do I extend the Thread Dump tab?</a></ul></td>
                 </tr>
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.ui</td>
