--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -34,7 +34,7 @@
             <li>Step through and complete the plugin installer.</li>
         </ol>
         <img src="images/getstarted/vvm-plugins-window.png">
-        <caption>Screenshot of Plugin manager with the VisualVM-MBeans plugin selected.</caption>            
+        <p class="small">Screenshot of Plugin manager with the VisualVM-MBeans plugin selected.</p>
 
 
         <h2>Viewing Application Data</h2>
