adding the api quick start to the index page
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@375 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -134,6 +134,7 @@
                         <li><a href="https://visualvm.dev.java.net/description.html">Introduction to VisualVM</a></li>
                         <li><a href="https://visualvm.dev.java.net/troubleshooting.html">Troubleshooting Guide</a></li>
                         <li><a href="https://visualvm.dev.java.net/build.html">Build Guide</a></li>
+                        <li><a href="https://visualvm.dev.java.net/api-quickstart.html">Getting Started Extending VisualVM</a></li>
                         <li><a href="http://weblogs.java.net/blog/mandychung/archive/VisualVM-BOF-2007.pdf">BOF-9123, JavaOne 2007</a></li>
                       </ul>
           </div>
