hiding [at least temporarily] the netbeans.css
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@376 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -3,7 +3,7 @@
     <head>
         <!-- -*- xhtml -*- -->
         <title>Getting Started Extending VisualVM</title>
-        <link rel="stylesheet" type="text/css" href="http://www.netbeans.org/netbeans.css">
+    <!--    <link rel="stylesheet" type="text/css" href="http://www.netbeans.org/netbeans.css">-->
         <meta name="author" content="gwielenga@netbeans.org">
         <meta name="indexed" content="y">
         <meta name="description" content="A short guide to using the Visual VM API.">
