update getting started for new images
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@442 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -59,10 +59,10 @@
             <li>Click the Profiler tab in the application tab.</li>
             <li>Click Memory or CPU in the the Profiler tab.
             <p>When you click Memory, VisualVM instruments the application and displays the profiling data in the Profiler tab.</p>
-            <img src="images/getstarted/vvm-anagram-profiler.png" style="border:1px solid;" alt="screenshot of profier tab with profiling results" 
-            title="Screenshot showing the profiling results when analyzing memory allocation">
             </li>
         </ol>
+        <img src="images/getstarted/vvm-anagram-profiler.png" style="border:1px solid;" alt="screenshot of profier tab with profiling results" 
+        title="Screenshot showing the profiling results when analyzing memory allocation">
 
       
         <h3>Connecting to a Remote Host</h3>
@@ -96,9 +96,10 @@
             <li>Choose Tools &gt; Plugins from the main menu.</li>
             <li>In the Available Plugins tab, select the Install checkbox for the plugin. Click Install.</li>
             <li>Step through and complete the plugin installer.<br/>
-        <img src="images/getstarted/vvm-plugins-window.png">
-        <p class="small">Screenshot of Plugin manager with the VisualVM-MBeans plugin selected.</p></li>
         </ol>        
+        <img src="images/getstarted/vvm-plugins-window.png" alt="screenshot of Plugins window" 
+        title="Screenshot of Plugins window">
+        <p class="small">Screenshot of Plugin manager with the VisualVM-MBeans plugin selected.</p></li>
 
 
         
