new item for latest series of blogs
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@452 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -622,6 +622,10 @@ public void uninstalled() {
                     <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part4">Getting Started Extending VisualVM (Part 6)</a>.</b>
                     Here you learn a lot about the primary actors of VisualVM&#8212;data sources. In addition, you are
                     shown all the code that you need for creating your own data source.
+                    <li><b><a href="http://blogs.sun.com/geertjan/entry/comparing_data_sources_in_visualvm">Getting Started Extending VisualVM (Part 7)</a>.</b>
+                    Here you find out how to create a tab for comparing data from multiple instances of the same data source type.
+                    In this case, the tab contains the system properties (or JVM arguments)
+                    of all the running Java applications, at the same time.
                 </ul>    
             </li>
             
