tweak and adding developer FAQ
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@453 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
           
           <h4 style="margin-top: 5px; margin-bottom: 8px;">News</h4>
           
-          <p style="margin-top: 0px; margin-bottom: 5px;"><b><i>March 7th, 2008:</i></b> VisualVM Beta released. There are many news in this release:
+          <p style="margin-top: 0px; margin-bottom: 5px;"><b><i>March 7th, 2008:</i></b> VisualVM Beta released. There are many new features in this release:
           applications defined by JMX connection, application snapshots, defined hosts and VM coredumps persistence, Load & Save As for thread dumps and heap dumps,
           autodiscovery of jstatd started after defining remote host, improved support for JRockit VMs, new icons, main menu & toolbar cleanup, customizable Options,
           GlassFish plugin on Plugin Center. Sources are available in <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=visualvm_beta"><code>visualvm_beta</code></a> branch.
@@ -141,6 +141,7 @@
                         <li><a href="https://visualvm.dev.java.net/troubleshooting.html">Troubleshooting Guide</a></li>
                         <li><a href="https://visualvm.dev.java.net/build.html">Build Guide</a></li>
                         <li><a href="https://visualvm.dev.java.net/api-quickstart.html">Getting Started Extending VisualVM</a></li>
+                        <li><a href="https://visualvm.dev.java.net/api-faq.html">VisualVM Developer FAQ</a></li>
                         <li><a href="http://weblogs.java.net/blog/mandychung/archive/VisualVM-BOF-2007.pdf">BOF-9123, JavaOne 2007</a></li>
                       </ul>
           </div>
