updating troubleshooting guide to include known problems with GlassFish plugin
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@455 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -44,6 +44,21 @@ and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f4042
 <p><b>Resolution:&nbsp;&nbsp;</b>Unfortunately profiling does not work with Developer preview of JDK 6.0, due to bug in the JDK. However you can
     still take thread and heap dumps of applications running on JDK 6.0 on Mac OS X.</p><br>
 
+<a name="gfstatsdisabled"/>
+<h3>Can not get the list of web applications from GlassFish</h3>
+<p><b>Description:&nbsp;</b>Opening the "Model" subnode of the GlassFish application hangs with "Please Wait" displayed</p>
+<p><b>Resolution:&nbsp;&nbsp;</b>This happens when monitoring of web applications is not allowed on the target server. In order to enable monitoring 
+      you need to go to <i>Application Server/Monitor/Runtime/Configure Monitoring</i> from the GlassFish administration console and set
+      <i>Web Container</i> to <i>High</i>. You can also try and use this <a href="http://localhost:4848/configuration/monitoringService.jsf?configName=server-config" target="_new">link</a>
+      to open the configuration from here.
+</p><br/>
+
+<a name="gfnoservlets"/></a>
+<h3>No servlets displayed in the runtime area of GlassFish web application tab</h3>
+<p><b>Description:&nbsp;</b>There are no servlets displayed in the runtime are of GlassFish web application tab (see <a href="images/troubleshoot/visualvm_gf_noservlets.png" target="_new">here</a>)</p>
+<p><b>Resolution:&nbsp;&nbsp;</b>Only servlets with some statistics available are displayed. In order to generate statistics put some load on the web application</p>
+<br/>
+
 <!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->    
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
 </script>
