--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -44,7 +44,7 @@ and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f4042
 <p><b>Resolution:&nbsp;&nbsp;</b>Unfortunately profiling does not work with Developer preview of JDK 6.0, due to bug in the JDK. However you can
     still take thread and heap dumps of applications running on JDK 6.0 on Mac OS X.</p><br>
 
-<a name="gfstatsdisabled"/>
+<a name="gfstatsdisabled"></a>
 <h3>Can not get the list of web applications from GlassFish</h3>
 <p><b>Description:&nbsp;</b>Opening the "Model" subnode of the GlassFish application hangs with "Please Wait" displayed</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>This happens when monitoring of web applications is not allowed on the target server. In order to enable monitoring 
