capitalization of first letter
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@458 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -45,7 +45,7 @@ and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f4042
     still take thread and heap dumps of applications running on JDK 6.0 on Mac OS X.</p><br>
 
 <a name="gfstatsdisabled"></a>
-<h3>Can not get the list of web applications from GlassFish</h3>
+<h3>Can Not Get The List Of Web Applications From GlassFish</h3>
 <p><b>Description:&nbsp;</b>Opening the "Model" subnode of the GlassFish application hangs with "Please Wait" displayed</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>This happens when monitoring of web applications is not allowed on the target server. In order to enable monitoring 
       you need to go to <i>Application Server/Monitor/Runtime/Configure Monitoring</i> from the GlassFish administration console and set
@@ -54,7 +54,7 @@ and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f4042
 </p><br/>
 
 <a name="gfnoservlets"/></a>
-<h3>No servlets displayed in the runtime area of GlassFish web application tab</h3>
+<h3>No Servlets Displayed In The Runtime Area Of GlassFish Web Application Tab</h3>
 <p><b>Description:&nbsp;</b>There are no servlets displayed in the runtime are of GlassFish web application tab (see <a href="images/troubleshoot/visualvm_gf_noservlets.png" target="_new">here</a>)</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>Only servlets with some statistics available are displayed. In order to generate statistics put some load on the web application</p>
 <br/>
