--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>Troubleshooting guide for VisualVM Preview 2</title>
+<title>Troubleshooting guide for VisualVM Beta</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
 <body>
     
-<h3><font size="+1">Troubleshooting guide for VisualVM Preview 2</font></h3>
+<h3><font size="+1">Troubleshooting guide for VisualVM Beta</font></h3>
 <br>
 
 <a name="jrehost"></a>
@@ -56,7 +56,7 @@ and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f4042
 <a name="gfnoservlets"/></a>
 <h3>No Servlets Displayed In The Runtime Area Of GlassFish Web Application Tab</h3>
 <p><b>Description:&nbsp;</b>There are no servlets displayed in the runtime are of GlassFish web application tab (see <a href="images/troubleshoot/visualvm_gf_noservlets.png" target="_new">here</a>)</p>
-<p><b>Resolution:&nbsp;&nbsp;</b>Only servlets with some statistics available are displayed. In order to generate statistics put some load on the web application</p>
+<p><b>Resolution:&nbsp;&nbsp;</b>Only servlets with some statistics available are displayed. In order to generate statistics put some load on the web application.</p>
 <br/>
 
 <!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->    
