--- a/www/intro.html
+++ b/www/intro.html
@@ -28,8 +28,8 @@
         The main VisualVM window is divided into two windows.</p>
         
         
-        <h5>Applications Window</h5>
-        <p>The <a href="applications_window.html">Applications window</a> opens in the left of the VisualVM when you launch the application.
+        <p><b>Applications Window</b><br />
+        The <a href="applications_window.html">Applications window</a> opens in the left of the VisualVM when you launch the application.
         The Applications window is the main point of entry for exploring the details of running applications.
         The Applications window enables you to quickly view the applications running on the local machine and any connected remote machines.
         You can also access core dumps (Solaris only) and saved snapshots from the Applications window.</p>
@@ -47,8 +47,8 @@
 
 
 
-        <h5>Main Window</h5>
-        <p>Detailed information about applications is displayed in the main window.
+        <p><b>Main Window</b><br />
+        Detailed information about applications is displayed in the main window.
         When you view data about an application, each application is represented by a tab in the main window 
         that enables you to easily view and navigate the data.
         Saved thread or heap dump are also opened in the main window.</p>
