--- a/www/profiler.html
+++ b/www/profiler.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>VisualVM Profiler Tab</title>
+        <title>Using the VisualVM Profiler</title>
         <link rel="stylesheet" type="text/css" href="default.css" />
     </head>
     <body>
-        <h1>Profiler Tab</h1>
+        <h1>Using the VisualVM Profiler</h1>
         <hr />
         <p>VisualVM presents data for local and remote applications in a tab specific for that application.
         You can have multiple application tabs open.
