--- a/www/snapshots.html
+++ b/www/snapshots.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>Taking Snapshots</title>
+        <title>Working with Snapshots</title>
         <link rel="stylesheet" type="text/css" href="default.css" />
     </head>
     <body>
-        <h2>Taking Snapshots</h2>
+        <h2>Working with Snapshots</h2>
         
         <p>VisualVM enables you to take snapshots of application data and save the snapshots to your local system.</p>
 
