--- a/www/overview_tab.html
+++ b/www/overview_tab.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>VisualVM Applications Window</title>
+        <title>VisualVM Applications Overview</title>
         <link rel="stylesheet" type="text/css" href="default.css">
     </head>
     <body>
-        <h1>Overview Tab</h1>
+        <h1>Application Overview</h1>
         <hr />
         <p>VisualVM presents data for local and remote applications in a tab specific for that application.
         When you open an application in VisualVM, each application opens in a new tab in the main window.
