update draft of overview and remote app pages
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@657 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/overview_tab.html
+++ b/www/overview_tab.html
@@ -9,7 +9,8 @@
         <p>VisualVM presents data for local and remote applications in a tab specific for that application.
         When you open an application in VisualVM, each application opens in a new tab in the main window.
         You can have multiple application tabs open.</p>
-        <p>For more, see <a href="applications_local.html">Working with Local Applications</a> and <a href="applications_remote.html">Working with Remote Applications</a>.</p>
+        <p>The Overview tab is opened by defautl when 
+        <a href="applications_local.html">Working with Local Applications</a> and <a href="applications_remote.html">Working with Remote Applications</a>.</p>
         <p>In the Overview tab, the information about the application is grouped into sub-tabs.</p>
 
         <h3>Overview</h3>
