--- a/www/applications_remote.html
+++ b/www/applications_remote.html
@@ -43,7 +43,10 @@
         <p>For more see <a href="overview_tab.html">Application Overview</a></p>
 
 
-
+        <h3>Monitoring Application Activity</h3>
+        <p>You can use VisualVM to monitor a local application and view high-level data on thread activity 
+        and memory heap and garbage collection in the VM.</p>
+        <p>For more see <a href="monitor_tab.html">Monitoring an Application</a></p>
         
 
             
