--- a/www/intro.html
+++ b/www/intro.html
@@ -14,7 +14,10 @@
         
         <h2>Starting VisualVM</h2>
         <p>After downloading and unzipping the VisualVM zip file, you start VisualVM by double-clicking the VisualVM
-        executable or typing <tt>jvisualvm</tt> at the command line.</p>
+        executable or typing the following command at the command line.<br />
+        <tt>jvisualvm</tt><br /> 
+        The main VisualVM window opens when you start the application.</p>
+        
         <!--<p>The VisualVM executable can be found in JDK_HOME/bin, where JDK_HOME is the directory in which the Java Development Kit (JDK) is installed. 
         If this directory is in your system path, you can start JConsole by simply typing visualvm in a command (shell) prompt. 
         Otherwise, you have to type the full path to the executable file.
@@ -22,8 +25,8 @@
 
         <h3>Command Syntax</h3>
 
-        <p>For a complete reference on the syntax of the visualvm command, see the manual page for the visualvm command: 
-        <a href="#">VisualVM man page</a>.</p>
+        <p>For a complete reference on the syntax of the <tt>jvisualvm</tt> command, see the manual page: 
+        <a href="#"><tt>jvisualvm</tt> man page</a>.</p>
 
 
         <h3>VisualVM Windows</h3>
