--- a/www/intro.html
+++ b/www/intro.html
@@ -14,9 +14,8 @@
         
         <h2>Starting VisualVM</h2>
         <p>After downloading and unzipping the VisualVM zip file, you start VisualVM by double-clicking the VisualVM
-        executable or typing the following command at the command line.<br />
-        <tt>jvisualvm</tt><br /> 
-        The main VisualVM window opens when you start the application.</p>
+        executable or typing the following command at the command line.<p>
+        <p><tt>jvisualvm</tt></p>
         
         <!--<p>The VisualVM executable can be found in JDK_HOME/bin, where JDK_HOME is the directory in which the Java Development Kit (JDK) is installed. 
         If this directory is in your system path, you can start JConsole by simply typing visualvm in a command (shell) prompt. 
