--- a/www/heapdump.html
+++ b/www/heapdump.html
@@ -24,7 +24,7 @@
         
         <h4>Taking a Heap Dump</h4>
         <p>You can use VisualVM to take a heap dump of a local running application.
-        VisualVM takes uses the jhat tool included with the JDK to take heap dumps of applications running on the JVM.
+        VisualVM takes uses the <tt>jhat</tt> tool included with the JDK to take heap dumps of applications running on the JVM.
         
         When you use VisualVM to take a heap dump, the file is only temporary until you explicitly save it.
         If you do not save the file, the file will be deleted when the application closes.</p>
