--- a/www/monitor_tab.html
+++ b/www/monitor_tab.html
@@ -11,7 +11,7 @@
         You can have multiple application tabs open.</p>
         
 
-        <p>The Monitor tab is a sub-tab of the application tab that displays real-time, high-level data about the memory heap
+        <p>The Monitor tab is a sub-tab of the application tab and displays real-time, high-level data about the memory heap
         thread activity and classes loaded in the VM.
         Monitoring an application imposes low overhead and can be used for extended periods.</p>
         
