add missing link
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@723 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/intro.html
+++ b/www/intro.html
@@ -69,6 +69,7 @@
             <li><a href="mbeans_tab.html">MBeans Tab</a>
             <!--<a href="coredumps.html">Working with Coredumps</a>--></li>
             <li><a href="threads.html">Threads Tab</a></li>
+            <li><a href="heapdump.html">Heap Dump</a></li>
         </ul>
 
 
