add plugin section
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@726 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/intro.html
+++ b/www/intro.html
@@ -73,6 +73,12 @@
         </ul>
 
 
+        <h3>VisualVM Plugins</h3>
+        <p>You can add functionality to VisualVM by installing VisualVM plugins from the VisualVM update center.</p>
+        <p>You can develop plugins for VisualVM</p>
+
+<p>For more information about plugins, see the following documents:</p>        
+        
       <!--  <img src="images/overview.png"/><br>
         <b>Figure 3: Application Tab</b>
         <p>Each application tab has one or more displays that provide information
