--- a/www/monitor_tab.html
+++ b/www/monitor_tab.html
@@ -18,27 +18,27 @@
         <img src="images/docs/monitor.png" style="border:1px solid;" alt="screenshot of Monitor tab" 
         title="screenshot of Monitor tab" />
         
-        <p>The Monitor tab has graphs that display the following:</p>
+        <p>The Monitor tab has the following graphs:</p>
         <ul>
-            <li><b>Heap.</b> Displays the total heap size and how much of the heap is currently used. 
+            <li><b>Heap.</b> The Heap graphs displays the total heap size and how much of the heap is currently used. 
             These are the figures that a Java application can obtain using the <tt>java.lang.Runtime.totalMemory()</tt>
             and java.lang.Runtime.freeMemory() calls.</li>
-            <li><b>PermGen.</b>
+            <li><b>PermGen.</b> The PermGen graph displays changes in the permanent generation area over time.
             The permanent generation is the area of the heap where class and method objects are stored. 
             If an application loads a very large number of classes, then the size of the permanent generation might need to be increased using the -XX:MaxPermSize option.
-            The PermGen graph displays information retrieved using the <tt>jmap</tt> utility.
-            The PermGen graph displays the relationship between the used permgen space and the total size of the permgen space.
-            </li>
-            
-            <li><b>Classes</b> The Classes graph displays information about the total number of loaded classes and shared classes.</li>
-            <li><b>Threads.</b> Displays the current number of live and daemon threads in the application's JVM.</li>
+            The PermGen statistics are retrieved using the <tt>jmap</tt> utility and
+            display the relationship between the used permgen space and the total size of the permgen space.</li>
+            <li><b>Classes</b> The Classes graph displays an overview of the total number of loaded classes and shared classes.</li>
+            <li><b>Threads.</b> The Threads graphs displays an overview of the number of live and daemon threads in the application's JVM.
+            You can use VisualVM to take a thread dump if you want to capture and view exact data on application threads at 
+            a specific point in time. 
+            <p>For more, see <a href="threads.html">Monitoring Application Threads</a>.</p></li>
         </ul>
-        <p>When you are monitoring a local application, you can perform the following actions from within VisualVM.
-        </p>
+        <p>The Monitoring tab contains buttons that enable you to perform the following actions:</p>
         <ul>
-            <li><b>Perform GC</b> Click this to perform garbage collection immediately.</li>
-            <li><b>Heap Dump.</b> Click this to take a <a href="heapdump.html">heap dump</a>. When you take a heap dump,
-            a tab displaying the heap dump opens in the application tab. 
+            <li><b>Perform GC</b> Click Perform GC to perform garbage collection immediately.</li>
+            <li><b>Heap Dump.</b> Click Heap Dump to take a <a href="heapdump.html">heap dump</a>. 
+            When you take a heap dump, a tab displaying the heap dump opens in the application tab. 
             A node for the heap dump appears under the node for the application in the Applications window.
             <p>For more, see <a href="heapdump.html">Browsing a Heap Dump</a></p></li>
         </ul>
