minor topic updates
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@731 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/applications_window.html
+++ b/www/applications_window.html
@@ -67,7 +67,7 @@
                 an OutOfMemoryException is encountered. The heap dump is save to XXX.</li>
             </ul>
     -->        
-            <p>For more information about how to view data about local applications, see the following document:</p>
+            <p>For more information about how to view data about local applications, see the following pages:</p>
             <ul>
                 <li><a href="applications_local.html">Working with Local Applications</a></li>
                 <li><a href="snapshots.html">Working with Snapshots</a></li>
@@ -89,11 +89,13 @@
             needs to be running on the remote host.
             To start the <tt>jstatd</tt> utility, type jstatd on the command line.
             The <tt>jstatd</tt> utility is included as part of JDK 6.
-            <a href="http://java.sun.com/javase/6/docs/technotes/tools/share/jstatd.html">jstatd - Virtual Machine jstat Daemon</a>
             </p>
 
-            <p>For more information about how to view data about remote applications, see the following document:</p>
-            <ul><li><a href="applications_remote.html">Working with Remote Applications</a>.</li></ul>
+            <p>For more information about how to view data about remote applications, see the following pages:</p>
+            <ul>
+                <li><a href="applications_remote.html">Working with Remote Applications</a>.</li>
+                <li><a href="http://java.sun.com/javase/6/docs/technotes/tools/share/jstatd.html">jstatd - Virtual Machine jstat Daemon</a></li>
+            </ul>
             
             
             <h3>VM Coredumps</h3><a name="coredump"></a>
