add links to coredumps page
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@741 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/intro.html
+++ b/www/intro.html
@@ -6,12 +6,13 @@
     <body>
         <h1>VisualVM Overview</h1>
         <hr />
-        <p>VisualVM is a tool that provides detailed information about Java applications while they are running. 
-        VisualVM provides an intuitive visual interface for viewing data about applications 
-        running on the Java Virtual Machine (JVM).
-        VisualVM organizes data about the JVM that is retrieved by the JDK tools.
-        VisualVM organizes how the data is dispayed and enables you to quickly view data on multiple Java applications, 
-        both local applications and applications that are running on remote hosts.</p>
+        <p>VisualVM is a tool that provides a visual interface for viewing detailed information about Java applications 
+        while they are running on the Java Virtual Machine (JVM).
+        VisualVM organizes JVM data that is retrieved by the JDK tools and presents the information in a way that
+        enables you to quickly view data on multiple Java applications.
+        You can view data on local applications and applications that are running on remote hosts.
+        You can also capture JVM data and save the data to your local system, and view the data later or share the
+        data with others.</p>
         
         <h3>Starting VisualVM</h3>
         <p>After you download and extract the VisualVM zip archive to your local system, navigate to the <tt>bin</tt> directory of the expanded archive
