minor syntax changes
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@746 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/intro.html
+++ b/www/intro.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="default.css">
     </head>
     <body>
-        <h1>VisualVM Overview</h1>
+        <h1>Introduction to VisualVM</h1>
         <hr />
         <p>VisualVM is a tool that provides a visual interface for viewing detailed information about Java applications 
         while they are running on the Java Virtual Machine (JVM).
