--- a/www/applications_local.html
+++ b/www/applications_local.html
@@ -60,7 +60,8 @@
         <p>When you take a heap dump, the heap dump opens as a tab of the application in the main window.
         A node for the heap dump appears under the application node in the Applications window.
         </p>
-        <p>For more see <a href="heapdump.html">Browsing a Heap Dump</a></p>
+        <p>For more see the following document:</p>
+        <ul><li><a href="heapdump.html">Browsing a Heap Dump</a></li></ul>
         
         
         <h3>Taking a Thread Dump</h3>
@@ -75,7 +76,8 @@
             <li>Click the Thread Dump button in the Threads tab of the application tab.</li>
         </ul>
 
-        <p>For more see <a href="threads.html">Monitoring Application Threads</a></p>
+        <p>For more see the following document:</p>
+        <ul><li><a href="threads.html">Monitoring Application Threads</a></li></ul>
 
 
         <h3>Profiling the Application</h3>
@@ -94,6 +96,7 @@
         You can save snapshots to the local system.
         You can send snapshots to other users.
         You can open and view snapshots when the application is not running.</p>
-        <p>For more see <a href="snapshots.html">Taking Sanpshots</a></p>
+        <p>For more see the following document:</p>
+        <ul><li><a href="snapshots.html">Taking Sanpshots</a></li></ul>
     </body>
 </html>
