--- a/www/index.html
+++ b/www/index.html
@@ -137,9 +137,10 @@
           </div>
           <div style="border: 1px solid #696; padding: 5px 5px 5px 10px;">
               <ul style="margin-top: 3px; padding-top: 3px; margin-left: 10px; padding-left: 10px; margin-bottom: 2px; padding-bottom: 2px;">
-                        <li><a href="https://visualvm.dev.java.net/description.html">Introduction to VisualVM</a></li>
+                        <li><a href="https://visualvm.dev.java.net/docindex.html">Documentation and Resources</a></li>
                         <li><a href="https://visualvm.dev.java.net/troubleshooting.html">Troubleshooting Guide</a></li>
                         <li><a href="https://visualvm.dev.java.net/build.html">Build Guide</a></li>
+                        <li><a href="https://visualvm.dev.java.net/gettingstarted.html">Getting Started with VisualVM</a></li>
                         <li><a href="https://visualvm.dev.java.net/api-quickstart.html">Getting Started Extending VisualVM</a></li>
                         <li><a href="https://visualvm.dev.java.net/api-faq.html">VisualVM Developer FAQ</a></li>
                         <li><a href="http://weblogs.java.net/blog/mandychung/archive/VisualVM-BOF-2007.pdf">BOF-9123, JavaOne 2007</a></li>
