--- a/www/applications_remote.html
+++ b/www/applications_remote.html
@@ -38,13 +38,15 @@
         By default, the application tab is closed.</p>
         <p>To open the application tab, right-click the application node in the Applications window and choose Open.
         When you click Open, the Overview tab of the application tab opens in the main window.</p>
-        <p>For more see <a href="overview_tab.html">Viewing Application Overview</a></p>
+        <p>For more see the following document:</p>
+        <ul><li><a href="overview_tab.html">Viewing Application Overview</a></li></ul>
 
 
         <h3>Monitoring Application Activity</h3>
         <p>You can use VisualVM to monitor a remote application and view high-level data on thread activity 
         and memory heap and garbage collection in the VM.</p>
-        <p>For more see <a href="monitor_tab.html">Monitoring an Application</a></p>
+        <p>For more see the following document:</p>
+        <ul><li><a href="monitor_tab.html">Monitoring an Application</a></li></ul>
         
 
             
