--- a/www/docindex.html
+++ b/www/docindex.html
@@ -25,8 +25,7 @@
                 <li><a href="applications_window.html">Using the Applications Window</a></li>
                 <li><a href="applications_local.html">Working with Local Applications</a></li>
                 <li><a href="applications_remote.html">Working with Remote Applications</a></li>
-                <li>Working with VM Coredumps
-                <!--<a href="coredumps.html">Working with Coredumps</a>--></li>
+                <li><a href="coredumps.html">Working with Coredumps</a></li>
                 <li><a href="snapshots.html">Working with Snapshots</a></li>
                 <li><a href="heapdump.html">Browsing a Heap Dump</a></li>
             </ul>
